--- a/ccs/estilos.css
+++ b/ccs/estilos.css
@@ -2,12 +2,15 @@
 /** MAQUETADO DE LA PÁGINA PARA PANTALLA DE COMPU*/
 *{
     margin:0px;
-    
+   
 }
-
+.index{
+    background: linear-gradient(to right, #080808d0, #080808de), url(../img/fondo-index.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
 .contenedor{
-    
-    background-color: rgb(22, 21, 21);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: white;
     display: grid;
@@ -47,6 +50,7 @@
 }
 .user{
     list-style: none;
+    cursor: pointer;
 }
 .hamburger{
     cursor: pointer;
@@ -55,6 +59,7 @@
 .fa-solid{
     font-size:1.3rem ;
 }
+
 
 /*? = = = = = E S T I L O   D E L   C A R R U S E L = = = = = */
 .carrusel{
@@ -116,16 +121,14 @@
     padding: 5px 10px;
     text-decoration: none;
     color: #fff;
-    background-color: #0074D9;
-    border: 1px solid #0074D9;
+    background-color: #242222;
     border-radius: 5px;
     transition: background-color 0.3s, color 0.3s, transform 0.3s;
 }
 .link-peliculas:hover{
-    background-color: #0056b3;
+    background-color: #808285;
     color: #fff;
     transform: scale(1.05); /* Aumenta el tamaño del enlace en un 5% */
-    border-color: #0056b3;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3); /* Agrega una sombra suave */
     transition: background-color 0.3s, color 0.3s, transform 0.3s, box-shadow 0.3s;
 }
@@ -162,6 +165,8 @@
 .destacadas{
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .destacada{
     width: 100%;
@@ -170,9 +175,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+    margin-top: .5em;
     }
-.destacada img{
-    width:90%;
+.destacada .desta{
+    width:95%;
+    height: 88%;
 }
 
 /** = = = = = E S T I L O   D E  M A R Q U E S I N A = = = = = */
@@ -260,9 +267,7 @@
     .menu{
         width: 450px;
     }
-    .user{
 
-    }
     .carrusel{
         width: 100%;
         height:100%;
@@ -284,6 +289,7 @@
         flex-direction: column;
         padding-top: 1em;
         margin-left: .5em;
+        /* display: none; */
     }
     .destacadas{
         width: 100%;
@@ -294,9 +300,9 @@
         flex-direction: column;
         font-size: .9em;
         }
-    .destacada img{
+        .destacada .desta{
         width:90%;
-        height: 60%;
+        height: 70%;
         object-fit: cover;
     }
     .slider{
