Lista página Conocenos + detalles de footer y menu

--- a/ccs/estilos.css
+++ b/ccs/estilos.css
@@ -41,6 +41,15 @@
     width: 600px;
     padding: .4em;
 }
+.menu a {
+    color: white;
+    text-decoration: none;
+    transition: color 0.3s ease; /* Agrega una transición suave al cambio de color */
+}
+
+.menu a:hover {
+    color: #F39C12; /* Cambia el color al pasar el mouse */
+}
 .item{
     list-style: none;
 }
@@ -58,6 +67,36 @@
 }
 .fa-solid{
     font-size:1.3rem ;
+}
+/*? = = = = = E S T I L O   D E L   P O P U P = = = = = */
+#popup {
+    position: absolute;
+    top: 50px;
+    left: 50px;
+    width: 200px;
+    background-color: rgba(0, 0, 0, 0.7); 
+    color: #fff; 
+    border: 1px solid #0074D9;
+    padding: 10px;
+    display: none;
+    z-index: 999;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    border-radius: 5px; 
+}
+
+#popup .description {
+    font-size: 16px; 
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+#popup img {
+    width: 100%;
+    height: auto; 
+}
+
+#title:hover + #popup {
+    display: block; 
 }
 
 
@@ -124,6 +163,10 @@
     background-color: #242222;
     border-radius: 5px;
     transition: background-color 0.3s, color 0.3s, transform 0.3s;
+    max-width: 75%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .link-peliculas:hover{
     background-color: #808285;
@@ -155,31 +198,30 @@
 /*? = = = = = E S T I L O   D E L   A S I D E  = = = = = */
 .aside{
     grid-area: aside;
-    width: 18.6vw;
+    width: 21vw;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    
 }
 .destacadas{
+    width: 90%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
 }
 .destacada{
-    width: 100%;
+    width: 90%;
     height: 34vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
-    margin-top: .5em;
+    justify-content: center;
+    margin-top: 1em;
     }
 .destacada .desta{
-    width:95%;
-    height: 88%;
+    width:60%;
+    height: 90%;
 }
 
 /** = = = = = E S T I L O   D E  M A R Q U E S I N A = = = = = */
@@ -257,7 +299,7 @@
     bottom: 27px;
     right: 20px;
     background-color: #5D6D7E;
-    color: #ffffff;
+    color: #fcfcfc;
     border: none;
     border-radius: 50%;
     padding: 10px 20px;
@@ -266,7 +308,6 @@
     display: none;
     transition: all 0.3s; /* Animación al aparecer */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Sombra */
-    font-family: "Tu Fuente Personalizada";
   }
   
   #scrollToTopBtn:hover {
@@ -280,7 +321,7 @@
   
   #scrollToTopBtn::before {
     content: "\2191"; /* Código de la flecha hacia arriba */
-    font-size: 20px; /* Tamaño del ícono */
+    font-size: 24px; /* Tamaño del ícono */
   }
 
   
@@ -325,13 +366,15 @@
     }
     .destacadas{
         width: 100%;
-        
+        flex-direction: row;
+        justify-content: space-around;
     }
     .destacada{
+        flex-direction: column;
         font-size: .9em;
         }
         .destacada .desta{
-        width:50%;
+        width:90%;
         height: 70%;
         object-fit: cover;
     }
@@ -353,10 +396,8 @@
                          "pelis2"
                          "footer";
     }
-   
     
     .menu{
-        
         width: 100%;
         flex-direction: column;
         align-items: flex-start;
@@ -390,7 +431,7 @@
         height: 86%;
     }
     
-    .pelis , .pelis2{
+    .pelis, .pelis2{
         width: 100vw;
         flex-direction: row;
         flex-wrap: wrap;
@@ -405,7 +446,7 @@
         width: 95%;
         height: 100%;
     }
-    .aside , .marquesina{
+    .aside , .marquesina, .tecno{
         display: none;
     }
     .footer{
@@ -414,11 +455,5 @@
     .redes{
         width: 80vw;
         justify-content: space-around;
-        
-    }
-    .tecno{
-        display: none;
     }
 }
-
-
