--- a/ccs/estilos.conocenos.css
+++ b/ccs/estilos.conocenos.css
@@ -48,6 +48,15 @@ body{
     width: 600px;
     padding: .4em;
 }
+.menu a {
+    color: white;
+    text-decoration: none;
+    transition: color 0.3s ease; /* Agrega una transición suave al cambio de color */
+}
+
+.menu a:hover {
+    color: #F39C12; /* Cambia el color al pasar el mouse */
+}
 .item{
     list-style: none;
 }
@@ -66,6 +75,37 @@ body{
 .fa-solid{
     font-size:1.3rem ;
 }
+/*? = = = = = E S T I L O   D E L   P O P U P = = = = = */
+#popup {
+    position: absolute;
+    top: 50px;
+    left: 50px;
+    width: 200px;
+    background-color: rgba(0, 0, 0, 0.7); 
+    color: #fff; 
+    border: 1px solid #0074D9;
+    padding: 10px;
+    display: none;
+    z-index: 999;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    border-radius: 5px; 
+}
+
+#popup .description {
+    font-size: 16px; 
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+#popup img {
+    width: 100%;
+    height: auto; 
+}
+
+#title:hover + #popup {
+    display: block; 
+}
+
 
 .fila1, .fila2, .fila3{
     grid-area: fila1;
@@ -79,6 +119,7 @@ body{
 }
 .fila1 h2{
     text-align: center;
+    margin-bottom: 1em;
 }
 .fila{
     background-color: rgba(88, 88, 90, 0.5);
@@ -128,15 +169,21 @@ body{
 
 .aside{
     grid-area: aside;
-    width: 18.6vw;
+    width: 21vw;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     margin-top: 2.5em;
 }
+.destacadas{
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
 .destacada{
-    width: 100%;
+    width: 90%;
     height: 34vh;
     display: flex;
     flex-direction: column;
@@ -167,24 +214,80 @@ body{
     justify-content: space-around;
 }
 
-@media (max-widh: 768px){
+@media (max-width: 768px){
     .contenedor{
-        grid-template-areas:"header header"
+        grid-template:      "header header"
                             "fila1 fila1"
                             "fila2 fila2"
                             "fila3 fila3"
                             "fila4 fila4"
                             "footer footer";
     }
+
     .menu{
         width: 450px;
-        background-color: beige;
     }
-    .aside{
+    .aside, .tecno{
         display: none;
     }
-    .fila1 {
-        background-color: aqua;
-        text-align: center;
+    .fila {margin-top: 1em;
     }
+}
+@media (max-width: 425px){
+    .contenedor{
+        grid-template:  "header" 
+                        "fila1"
+                        "fila2"
+                        "fila3"
+                        "fila4"
+                        "footer";
+    }
+    .menu{
+        width: 100%;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        transition: transform .8s;
+        transform: translateY(-100%);
+    }
+   
+    .user{
+        margin-right: 2.5em;
+    }
+    .hamburger{
+        display: inherit;
+        position: absolute;
+        top:2rem;
+        right:1em;
+    }
+    .hamburger-show{
+        transform: translateY(0);
+    }
+    .fila1{
+        margin-top: 0em;
+    }
+    .fila{
+        width: 90%;
+        flex-direction: column;
+        height: initial;
+    }
+    .filaimg{
+        margin-top: .5em;
+    }
+    .filaimg img{
+        width: 80%;
+    }
+    .descripcion{
+        width: 90%;
+        margin-top: .5em;
+        padding: .5em;
+    }
+    .descripcion h3{
+        margin-bottom: .5em;
+    }
+    .enlaces{
+        padding: 1em;
+    }
+    
+   
 }
