--- a/ccs/estilos.css
+++ b/ccs/estilos.css
@@ -76,7 +76,7 @@
     width: 200px;
     background-color: rgba(0, 0, 0, 0.7); 
     color: #fff; 
-    border: 1px solid #0074D9;
+    border: 1px solid #ffffff;
     padding: 10px;
     display: none;
     z-index: 999;
@@ -357,25 +357,31 @@
     .tarjeta{
         text-align: center;
     }
+    .tarjeta img{
+        height: 18em;
+    }
     .aside{
-        width: 95vw;
+        width: 100vw;
         flex-direction: column;
-        padding-top: 1em;
-        margin-left: .5em;
-        display: none;
+        padding-top: 2.5em;
     }
     .destacadas{
-        width: 100%;
+        width: 100vw;
+        margin-top: 3.5em;
+        display: flex;
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: space-between;
     }
     .destacada{
+        width: 200px;
+        margin: .5em; /* Añade margen para separar las tarjetas */
+        display: flex;
         flex-direction: column;
-        font-size: .9em;
+        text-align: center;
         }
         .destacada .desta{
         width:90%;
-        height: 70%;
+        height: auto;
         object-fit: cover;
     }
     .slider{
@@ -383,6 +389,7 @@
     }
     .footer{
         width: 96vw;
+        margin-top: 5em;
     }
 }
 
