--- a/ccs/estilos.conocenos.css
+++ b/ccs/estilos.conocenos.css
@@ -6,7 +6,8 @@
    
 }
 body{
-   color: whitesmoke;
+    color: whitesmoke;
+    font-family: Arial, sans-serif;
     font-size: 16px;
 }
 .index{
@@ -149,6 +150,7 @@ body{
     align-items: center;
     justify-content: space-evenly;
     margin-left: .9em;
+    padding: 0 5%;
 }
 
 .enlaces{
