--- a/ccs/estilos.css
+++ b/ccs/estilos.css
@@ -210,7 +210,7 @@ font-size: 16px;
     transform: translateY(-50%);
 }
   
-/*? = = = = = E S T I L O   D E L   C A R R U S E L = = = = = 
+/*? = = = = = E S T I L O   D E L   C A R R U S E L = = = = = */
 .carrusel{
     grid-area: carrusel;
     width: 100%;
@@ -257,17 +257,11 @@ font-size: 16px;
     background-color: rgb(70, 67, 67);
     border-radius: 200px 200px 200px 200px;
 }
-*/
+
 /*? = = = = = E S T I L O    G A L E R I A   E S C R I T O R E S  = = = = = */
-.carrusel{
-    grid-area: carrusel;
-    width: 98%;
-    height: 90vh;
-    margin:0 auto;
-    overflow: hidden;
-}
 section{
     height: 85vh;
+    width: 98%;
     background: #000;
     display: flex;
     justify-content: center;
