--- a/ccs/estilos.css
+++ b/ccs/estilos.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Lora:wght@100;200;400;700&display=swap');
 /** MAQUETADO DE LA PÁGINA PARA PANTALLA DE COMPU*/
 *{
     margin:0px;
@@ -10,9 +10,13 @@
     background-attachment: fixed;
     background-size: cover;
 }
+h1, h2, h3{
+    font-weight: 700;
+}
 .contenedor{
-    font-family: Arial, sans-serif;
+    font-family: Lora, serif;
     font-size: 16px;
+    font-weight: 400;
     color: white;
     display: grid;
     grid-template: auto auto auto auto auto auto / 27% 27% 27% 1fr;
@@ -129,7 +133,8 @@
     padding: 20px;
     text-align: center;
     color: #fff;
-    font-family: Arial, sans-serif;
+    font-family: Lora, serif;
+    font-weight: 400;
     font-size: 16px;
 }
 form{
