--- a/ccs/estilos_escritores.css
+++ b/ccs/estilos_escritores.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Lora:wght@100;200;400;700&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -5,8 +6,12 @@
 
 body{
     color: whitesmoke;
-    font-family: Arial, sans-serif;
+    font-family: Lora, serif;
     font-size: 16px;
+    font-weight: 400;
+}
+h1, h2, h3{
+    font-weight: 700;
 }
 #bg-escritor {
     background-repeat: no-repeat;
@@ -51,7 +56,8 @@ body{
     max-width: 1300px;
     margin: 20px auto;
     display: grid;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: Lora;
+    font-weight: 400;
     color: white;
     grid-gap: 20px;
     grid-template-columns:repeat(4, 1fr);
